--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     env:
-      JWT: {{ secrets.JWT }},
-      node: {{ secrets.node }}
+      JWT: ${{ secrets.JWT }}
+      node: "datahub-03a25ce4.sesam.cloud"
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -34,5 +34,6 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run system test
+
         run: |
           cd node/ && ../sesam -version && ../sesam -vv test
