--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,6 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    env:
-      JWT: ${{ secrets.JWT }}
-      node: "datahub-03a25ce4.sesam.cloud"
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -34,6 +31,10 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run system test
+        env:
+          JWT: ${{ secrets.JWT }}
+          NODE: "datahub-03a25ce4.sesam.cloud"
+          SESAM_TAG: "1.15.38"
 
         run: |
           cd node/ && ../sesam -version && ../sesam -vv test
