--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,23 +13,21 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel 
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    name: Test sesam configuration against ci-node
+    env:
+      NODE: ${{ secrets.NODE }}
+      JWT: ${{ secrets.JWT }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Install Sesam client
-        run: bash <(curl -s https://raw.githubusercontent.com/sesam-io/sesam/master/install-latest.sh)
-
       # Runs a set of commands using the runners shell
-      - name: Run system test
+      - name: Run sesam test
         run: |
+          bash <(curl -s https://raw.githubusercontent.com/sesam-community/sesam-py/master/install-latest.sh)
           cd node/ && ../sesam -version && ../sesam -vv test
