--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,9 @@ jobs:
   test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    name: Test sesam configuration against ci-node
+    name: Sesam system test
     env:
-      NODE: ${{ secrets.NODE }}
+      NODE: "datahub-0b08b50b.sesam.cloud"
       JWT: ${{ secrets.JWT }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
