--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
     env:
       NODE: "datahub-0b08b50b.sesam.cloud"
       JWT: ${{ secrets.JWT }}
+      VERSION: 2.0.1
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -29,5 +30,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run sesam test
         run: |
-          bash <(curl -s https://raw.githubusercontent.com/sesam-community/sesam-py/2.0.1/install-latest.sh)
+          bash <(curl -s https://raw.githubusercontent.com/sesam-community/sesam-py/$VERSION$/install-latest.sh)
           cd node/ && ../sesam -version && ../sesam -vv test
