--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run sesam test
         run: |
-          bash <(curl -s https://raw.githubusercontent.com/sesam-community/sesam-py/env.VERSION/install-latest.sh)
+          bash <(curl -s https://raw.githubusercontent.com/sesam-community/sesam-py/${{ env.VERSION }}/install-latest.sh)
           cd node/ && ../sesam -version && ../sesam -vv test
